@@ -1,6 +1,7 @@
 --------------------------
 Changes in 1.9 (not yet released)
 
+- Add a new core::rect constructor which takes a dimension parameter and set's left-top to 0.
 - mtl (obj) format reader and write now regards texture scaling and translation. (thx @thanhle for noticing and patch proposal).
 - Added Visual Studio 2013 project files.
 - Added ability to set custom depth/stencil texture for render targets.
